# newsletter-emailer

./: Cargo.toml  Dockerfile
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20231212135424_create_subscriptions_table.sql  20231225174958_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
