[package]
name = "newsletter_emailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Necessary boilerplate to have /tests next to /src and wite ITs
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_emailer"

[dependencies]
actix-web = "4"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]