[package]
name = "newsletter_emailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Necessary boilerplate to have /tests next to /src and wite ITs
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_emailer"

[dependencies]
actix-web = "4"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1.19.0"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
time = "0.3.30"
unicode-segmentation = "1"
validator = "0.14"
matchers = "0.1.0"
url = "2.5.0"
serde_json = { version = "1.0.108", features = [] }
serde-aux = "4"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1"
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"